deploy/overlay/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-1:291133911351:certificate/4939a491-2937-4fde-a789-acc247399c80
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: test-cluster-ingress-group
  name: production-ingress
  namespace: production
spec:
  rules:
    - host: api.eks-cluster.com
      http:
        paths:
          - backend:
              service:
                name: microservice-one-service-name-prod
                port: 
                  number: 3000
            path: /*
            pathType: ImplementationSpecific
    - host: api-two.eks-cluster.com
      http:
        paths:
          - backend:
              service:
                name: microservice-two-service-name-prod
                port: 
                  number: 3000
            path: /*
            pathType: ImplementationSpecific
